--- a/free/api.html
+++ b/free/api.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费公共 API 服务导航 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
   <!-- Tailwind配置 -->
@@ -27,7 +29,7 @@
         },
       }
     }
-        } else {
+     </script>
   
   <!-- 自定义工具类 -->
   <style type="text/tailwindcss">
