--- a/free/devtools.html
+++ b/free/devtools.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费开发者工具 / Free Developer Tools</title>
-    <!-- 外部资源引入 -->
-  <script src="../assets/js/email-subscription.js"></script>    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <!-- 外部资源引入 -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="../assets/js/email-subscription.js"></script>
+ 
     
     <!-- Tailwind配置 - 保持与云服务页面一致的主题色彩系统 -->
     <script>
@@ -33,10 +36,11 @@
                     fontFamily: {
                         inter: ['Inter', 'system-ui', 'sans-serif'],
                     },
-                },
-            }
-        }
-        } else {
+      },
+    }
+  }
+</script>
+   
     
     <!-- 自定义工具类 -->
     <style type="text/tailwindcss">
