--- a/free/fonts.html
+++ b/free/fonts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费字体资源 / Free Fonts</title>
     <!-- 外部资源引入 -->
+    <script src="https://cdn.tailwindcss.com"></script>
   <script src="../assets/js/email-subscription.js"></script>    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 - 建立字体资源主题色彩系统 -->
@@ -35,7 +36,7 @@
                 }
             }
         }
-        } else {
+         </script>
     
     <!-- 自定义工具类 -->
     <style type="text/tailwindcss">
