--- a/free/image.html
+++ b/free/image.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费图像处理 API / Free Image Processing APIs</title>
     <!-- 外部资源引入 -->
-  <script src="../assets/js/email-subscription.js"></script>    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="../assets/js/email-subscription.js"></script>
     <!-- Tailwind配置 - 保持与主站一致的主题色彩系统 -->
     <script>
         tailwind.config = {
@@ -31,7 +32,7 @@
                 },
             }
         }
-        } else {
+       </script>
     
     <!-- 自定义工具类 -->
     <style type="text/tailwindcss">
