--- a/free/detail/cursor.html
+++ b/free/detail/cursor.html
@@ -834,7 +834,7 @@
                     &copy; 2023 Cursor Inc. 保留所有权利。
                 </div>
                 <div class="flex gap-6 text-sm text-gray-500">
-                    <a href="#" class="hover:text-primary transition-colors">服务条款</a>
+                    <a href="/about.html#terms" class="hover:text-primary transition-colors">服务条款</a>
                     <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors">Cookie 政策</a>
                 </div>
