--- a/free/detail/doubao.html
+++ b/free/detail/doubao.html
@@ -664,7 +664,7 @@
                 <p class="text-light-300 text-sm mb-4 md:mb-0">© 2023 豆包 AI. 保留所有权利.</p>
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-light-300 hover:text-primary text-sm transition-colors">服务条款</a>
+                    <a href="/about.html#terms" class="text-light-300 hover:text-primary text-sm transition-colors">服务条款</a>
                     <a href="#" class="text-light-300 hover:text-primary text-sm transition-colors">Cookie政策</a>
                 </div>
             </div>
