--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -259,7 +259,7 @@
                 <p>&copy; 2023 Rinuo资源导航. 保留所有权利.</p>
                 <div class="mt-2 space-x-4">
                     <a href="/about.html#privacy" class="hover:text-primary transition-colors theme-transition">隐私政策</a>
-                    <a href="#" class="hover:text-primary transition-colors theme-transition">服务条款</a>
+                    <a href="/about.html#terms" class="hover:text-primary transition-colors theme-transition">服务条款</a>
                 </div>
             </div>
         </div>
