--- a/404.html
+++ b/404.html
@@ -174,14 +174,29 @@
             </div>
         </div>
         
-        <!-- 搜索框 -->
-        <div class="mt-16 w-full max-w-md">
-            <h3 class="text-lg font-medium mb-4">搜索资源</h3>
-            <div class="relative">
-                <input type="text" id="search" placeholder="搜索工具、接口或资源..." class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary transition-colors pl-10">
-                <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-muted"></i>
-            </div>
-        </div>
+        <br />
+     <!-- 按钮容器 --> 
+      <button type="button" id="searchBtn" class="DocSearch DocSearch-Button bg-gray-800 hover:bg-gray-700 text-gray-100 rounded-lg px-4 py-2.5 flex items-center gap-3 transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800" aria-label="搜索文档">
+  <!-- 按钮主内容区域 -->
+  <span class="DocSearch-Button-Container flex items-center gap-2.5">
+    <!-- 搜索图标 -->
+    <span class="vp-icon DocSearch-Search-Icon text-gray-300 w-5 h-5">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="11" cy="11" r="8"></circle>
+        <path d="m21 21-4.3-4.3"></path>
+      </svg>
+    </span>
+    <!-- 提示文字 -->
+    <span class="DocSearch-Button-Placeholder text-sm">搜索文档</span>
+  </span>
+  
+  <!-- 快捷键提示区域 -->
+  <span class="DocSearch-Button-Keys flex items-center gap-1 ml-1">
+    <kbd class="DocSearch-Button-Key bg-gray-700/80 text-gray-300 text-xs px-2 py-0.5 rounded border border-gray-600">⌘</kbd>
+    <kbd class="DocSearch-Button-Key bg-gray-700/80 text-gray-300 text-xs px-2 py-0.5 rounded border border-gray-600">K</kbd>
+  </span>
+</button>
+
     </main>
 
     <!-- 页脚 -->
@@ -312,5 +327,6 @@
             document.body.classList.remove('opacity-0');
         });
     </script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
