--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ var _hmt = _hmt || [];
         <header class="mb-12 text-center">
             <h1 class="text-[clamp(1.8rem,5vw,2.8rem)] font-bold text-accent mb-3">开发者资源分类目录</h1>
             <p class="text-neutral max-w-3xl mx-auto">
-                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作 
+                精选开发领域优质资源，涵盖工具、技术文档和行业专家信息，助力开发者高效工作 <button class="">
+  在线: <span id="online-number">--</span> 人
+</button>
             
             </p>
         </header>
